--- a/app/src/main/res/layout/activity_medicine.xml
+++ b/app/src/main/res/layout/activity_medicine.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer"
     android:layout_width="match_parent"
-
     android:layout_height="match_parent"
-
-    android:fitsSystemWindows="true"
-    tools:context="com.example.regis.medsystem.MainActivity"
-    >
+    tools:context="com.example.regis.medsystem.Medicine">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/CoordinateLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+       >
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="false"
@@ -34,22 +31,13 @@
 
 
     </android.support.design.widget.CoordinatorLayout>
-  <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/relativeLayout"
-      >
-
-
-  </RelativeLayout>
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:menu="@menu/nav_item">
+        android:layout_below="@+id/CoordinateLayout"
+        android:layout_height="wrap_content">
 
-    </android.support.design.widget.NavigationView>
 
-</android.support.v4.widget.DrawerLayout>
+    </android.support.v7.widget.RecyclerView>
+
+</RelativeLayout>
