--- a/app/src/main/res/layout/activity_medicine.xml
+++ b/app/src/main/res/layout/activity_medicine.xml
@@ -1,43 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+
+<android.support.design.widget.CoordinatorLayout android:id="@+id/CoordinateLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.regis.medsystem.Medicine">
-
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/CoordinateLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-       >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="false"
+            android:layout_height="256dp"
+            android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <include
-                android:id="@+id/toolBar"
-                layout="@layout/toolbar"
-                app:layout_scrollFlags="scroll|enterAlways"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapse"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginEnd="64dp"
+                app:expandedTitleMarginStart="48dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                />
+
+                <include
+                    android:id="@+id/toolBar"
+                    layout="@layout/toolbar"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+
+                    />
+
+                <ImageView
+                    android:src="@drawable/medimage"
+                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    android:minHeight="100dp" />
+
+
+            </android.support.design.widget.CollapsingToolbarLayout>
 
 
         </android.support.design.widget.AppBarLayout>
-
-
-    </android.support.design.widget.CoordinatorLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle"
+
         android:layout_width="match_parent"
-        android:layout_below="@+id/CoordinateLayout"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
     </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
+
+
+
