--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,7 +6,13 @@
             android:title="Search"
             android:actionViewClass="android.widget.SearchView"
             android:icon="@android:drawable/ic_menu_search"
+            android:orderInCategory="100"
             />
+    <item
+        android:id="@+id/share"
+        android:icon="@android:drawable/ic_menu_share"
+        android:title="Share"
+        android:orderInCategory="101" />
 
 
 </menu>
