--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,88 +31,20 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v7.widget.CardView
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nested"
+            android:fitsSystemWindows="true"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="55dp"
-            android:clickable="true"
-            android:clipToPadding="true"
-            app:cardBackgroundColor="#fafcfd"
-            app:cardCornerRadius="2dp"
-            app:cardElevation="5dp"
-            app:cardUseCompatPadding="true">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/medCover"
-                    android:layout_width="match_parent"
-                    android:layout_height="220dp"
-                    android:clickable="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/cover" />
 
-                <View
-                    android:id="@+id/line"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@+id/medCover"
-                    android:background="@color/colorAccent" />
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/line"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="15dp"
-
-                    android:text="R&amp;D"
-                    android:textColor="#941919"
-                    android:textSize="25sp" />
-
-                <ImageView
-                    android:id="@+id/share_art"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_alignTop="@+id/bookmark"
-                    android:layout_marginEnd="31dp"
-                    android:layout_marginRight="31dp"
-                    android:layout_toLeftOf="@+id/bookmark"
-                    android:layout_toStartOf="@+id/bookmark"
-                    android:clickable="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_share" />
-
-                <ImageView
-                    android:id="@+id/bookmark"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_alignTop="@+id/fav"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_toLeftOf="@+id/fav"
-                    android:layout_toStartOf="@+id/fav"
-                    android:clickable="true"
-                    android:src="@drawable/ic_bookmark" />
-
-                <ImageView
-                    android:id="@+id/fav"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignTop="@+id/title"
-                    android:clickable="true"
-                    android:src="@drawable/ic_fav" />
-
-
-            </RelativeLayout>
-
-
-        </android.support.v7.widget.CardView>
+            </android.support.v7.widget.RecyclerView>
+        </android.support.v4.widget.NestedScrollView>
 
 
     </android.support.design.widget.CoordinatorLayout>
