--- a/app/src/main/res/layout/item_medbook.xml
+++ b/app/src/main/res/layout/item_medbook.xml
@@ -47,6 +47,19 @@
                 android:layout_below="@id/title_book"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/myDot"
+                android:src="@drawable/ic_dots"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/book_cover"
+                android:layout_marginTop="10dp"
+                android:clickable="true"
+                android:scaleType="centerCrop"
+
+                android:layout_width="30dp"
+                android:layout_height="20dp" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
