--- a/app/src/main/res/layout/activity_medicine.xml
+++ b/app/src/main/res/layout/activity_medicine.xml
@@ -18,9 +18,11 @@
                 android:id="@+id/collapse"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
@@ -33,11 +35,12 @@
 
                 <ImageView
                     android:src="@drawable/medimage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
                     app:layout_collapseMode="parallax"
-                    android:minHeight="100dp" />
+                    android:contentDescription="@string/app_name" />
 
 
             </android.support.design.widget.CollapsingToolbarLayout>
