--- a/app/src/main/res/layout/item_medbook.xml
+++ b/app/src/main/res/layout/item_medbook.xml
@@ -3,6 +3,7 @@
 
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -27,39 +28,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:src="@drawable/medbookcover"
+                android:clickable="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/title_book"
                 android:layout_below="@id/book_cover"
                 android:text="Essentials of Medical Pharmacology"
+                android:textSize="15sp"
+                android:textColor="#111112"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
 
                 android:layout_marginLeft="10dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/author_name"
                 android:text="Book by KD Tripathi"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 android:layout_marginLeft="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:layout_below="@id/title_book"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <ImageView
                 android:id="@+id/myDot"
-                android:src="@drawable/ic_dots"
+                app:srcCompat="@drawable/ic_dots"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/book_cover"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:clickable="true"
                 android:scaleType="centerCrop"
-
-                android:layout_width="30dp"
-                android:layout_height="20dp" />
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:layout_width="20dp"
+                android:layout_height="30dp" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
