--- a/app/src/main/res/layout/item_medbook.xml
+++ b/app/src/main/res/layout/item_medbook.xml
@@ -40,9 +40,6 @@
                 android:textColor="#111112"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-
-                android:layout_marginLeft="10dp"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -50,7 +47,8 @@
                 android:id="@+id/author_name"
                 android:text="Book by KD Tripathi"
                 android:textSize="13sp"
-                android:layout_marginLeft="10dp"
+                android:textColor="#2d2424"
+
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:layout_below="@id/title_book"
@@ -63,7 +61,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/book_cover"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="13dp"
                 android:clickable="true"
                 android:scaleType="centerCrop"
                 android:background="?attr/selectableItemBackgroundBorderless"
