--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.regis.medsystem.AboutUs">
 
     <android.support.design.widget.CoordinatorLayout
@@ -29,15 +29,16 @@
                 <include
                     android:id="@+id/toolBarAbout"
                     layout="@layout/toolbar"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
 
                     />
 
                 <ImageView
-                    android:src="@drawable/medimage"
                     android:layout_width="wrap_content"
                     android:layout_height="300dp"
                     android:scaleType="centerCrop"
+                    android:src="@drawable/medimage"
                     app:layout_collapseMode="parallax" />
 
 
@@ -45,34 +46,48 @@
 
 
         </android.support.design.widget.AppBarLayout>
-
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="4dp">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/aboutUsSection"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/myHeading"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/section"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                    android:text="This is a simple app for understanding medicine and its uses"
+                    android:textSize="32sp" />
 
+                <View
+                    android:id="@+id/myView"
+                    android:background="#000"
+                    android:layout_below="@+id/myHeading"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp" />
                 <TextView
-                    android:id="@+id/address"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:layout_below="@id/aboutUsSection"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/section" />
+                    android:id="@+id/myAim"
+                    android:layout_below="@+id/myHeading"
+                    android:layout_width="match_parent"
+                    android:textSize="32sp"
+                    android:text="This is based on crowdsourcing technology "
+                    android:layout_height="wrap_content" />
 
 
             </RelativeLayout>
 
+
+            </android.support.v7.widget.CardView>
         </android.support.v4.widget.NestedScrollView>
 
 
