--- a/app/src/main/res/layout/activity_volley_example.xml
+++ b/app/src/main/res/layout/activity_volley_example.xml
@@ -6,6 +6,7 @@
     tools:context="com.example.regis.medsystem.VolleyExample">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -16,6 +17,10 @@
 
     <TextView
         android:id="@+id/myData"
+        android:layout_below="@+id/appbar"
+        android:textSize="33sp"
+        android:text="Done"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
