--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="#58ba93"
+    android:background="@drawable/navimage"
 
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/title_header"
-        android:text="Medical Reference System"
-        android:gravity="center_horizontal"
+        android:text="Regis Charles"
         android:textSize="23sp"
-        android:textColor="#0c44ab"
-        android:layout_marginTop="50dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textColor="#121111"
 
-    <TextView
-        android:text="knowledge is wealth"
-        android:gravity="center_horizontal"
-        android:textSize="18sp"
-        android:textColor="#1619a4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-</LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="37dp" />
+
+
+</RelativeLayout>
