--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-        <item android:id="@+id/search"
-            android:title="Search"
-            android:actionViewClass="android.widget.SearchView"
-            android:icon="@android:drawable/ic_menu_search"
+    <item
+        android:id="@+id/login"
+        android:title="login"
+        android:icon="@drawable/ic_people"
             android:orderInCategory="100"
             />
     <item
         android:id="@+id/Register"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/ic_register"
         android:title="Register"
 
         android:orderInCategory="99" />
