--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,19 +8,18 @@
 
     <TextView
         android:id="@+id/title_header"
-        android:text="Regis Charles"
-        android:textSize="23sp"
-        android:textColor="#121111"
-
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="37dp"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="37dp" />
+        android:fontFamily="monospace"
+        android:text=""
+        android:textColor="#fcf9f9"
+        android:textSize="23sp" />
 
 
 </RelativeLayout>
