--- a/app/src/main/res/menu/nav_item.xml
+++ b/app/src/main/res/menu/nav_item.xml
@@ -23,6 +23,14 @@
                 android:id="@+id/medEnter"
                 android:icon="@drawable/ic_star"
                 android:title="Enter Medicine" />
+            <item
+                android:id="@+id/logout"
+                android:title="Logout"
+                android:icon="@drawable/logout" />
+            <item
+                android:id="@+id/manage"
+                android:title="Account"
+                android:icon="@drawable/ic_settings_black_24dp" />
 
         </menu>
     </item>
