--- a/app/src/main/res/layout/activity_article_demo.xml
+++ b/app/src/main/res/layout/activity_article_demo.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.regis.medsystem.ArticleDemo">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <include
+            android:id="@+id/toolbarArticle"
+            layout="@layout/toolbar" />
+
+    </android.support.design.widget.AppBarLayout>
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -26,40 +35,55 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputEditText
-            android:hint="@string/author"
+            android:hint="@string/title"
+            android:id="@+id/articleTitle"
         android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="textMultiLine" />
+            android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/titleArticle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/authorArticleWrapper"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
-        android:hint="@string/title" />
 
-    <EditText
-        android:id="@+id/articleContent"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/authorAuthorWrapper"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@+id/titleArticle"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:gravity="top"
-        android:hint="@string/article"
-        android:inputType="textMultiLine" />
+        android:layout_below="@+id/authorArticleWrapper"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:hint="@string/author"
+            android:id="@+id/articleAuthorName"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:inputType="text" />
+
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/authorContentWrapper"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/authorAuthorWrapper"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:hint="@string/article"
+            android:id="@+id/articleAuthorContent"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:inputType="textMultiLine" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/submitArticle"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/articleContent"
+        android:layout_below="@+id/authorContentWrapper"
         android:layout_marginBottom="105dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
         android:layout_marginTop="15dp"
         android:background="@color/colorPrimary"
         android:text="@string/submit_article"
