--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,21 @@
     tools:context="com.example.regis.medsystem.Login"
     android:padding="10dp">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <include
+            android:id="@+id/toolbar_login"
+            layout="@layout/toolbar"
+
+
+            />
+    </android.support.design.widget.AppBarLayout>
+
     <TextView
+        android:layout_below="@+id/appbarLogin"
         android:id="@+id/mainTitle"
         android:text="@string/medsystem"
         android:layout_centerHorizontal="true"
@@ -15,33 +29,51 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/phoneNoInput"
-        android:gravity="center"
-        android:layout_marginTop="22dp"
-        android:layout_below="@+id/mainTitle"
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:id="@+id/layoutUsername"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:hint="PhoneNo"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/mainTitle">
 
-        android:layout_width="320dp"
-        android:layout_height="60dp" />
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/usernameLogin"
+            android:layout_width="320dp"
+            android:layout_height="60dp"
+            android:inputType="phone"
+            android:textColorHint="@color/colorAccent"
+            android:hint="@string/phoneNo" />
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/PasswordInput"
-        android:gravity="center"
-        android:layout_marginTop="22dp"
-        android:layout_below="@+id/phoneNoInput"
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:id="@+id/layoutPassword"
         android:layout_centerHorizontal="true"
-        android:hint="Password"
-        android:layout_width="320dp"
-        android:layout_height="60dp" />
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/layoutUsername"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/passwordogin"
+            android:layout_width="320dp"
+            android:layout_height="60dp"
+            android:hint="@string/password"
+            android:textColorHint="@color/colorAccent"
+            android:inputType="textPassword" />
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
         android:id="@+id/login"
         android:layout_marginTop="22dp"
         android:layout_centerHorizontal="true"
+        android:background="@color/colorPrimary"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:text="Login"
-        android:layout_below="@+id/PasswordInput"
+        android:textSize="18sp"
+        android:textColor="#ffff"
+        android:layout_below="@+id/layoutPassword"
         android:layout_width="320dp"
         android:layout_height="60dp" />
 
