--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     tools:context="com.example.regis.medsystem.Profile">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="false"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <include
+            android:id="@+id/toolbarProfile"
+            layout="@layout/toolbar"
+            app:layout_scrollFlags="scroll|enterAlways"
+
+            />
+
+
+    </android.support.design.widget.AppBarLayout>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -45,11 +61,7 @@
 
                 >
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="80dp"
-                    android:layout_marginLeft="180dp"
-                    android:background="#000" />
+
 
                 <TextView
                     android:id="@+id/count"
@@ -95,22 +107,31 @@
             <Button
                 android:id="@+id/LogOut"
                 android:layout_width="wrap_content"
-                android:layout_below="@+id/AboustUsId"
-                android:layout_centerHorizontal="true"
                 android:text="LOGOUt"
-                android:textSize="22sp"
-                android:layout_marginTop="15dp"
-                android:layout_height="wrap_content" />
+                android:textSize="18sp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_below="@+id/AboustUsId"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:background="@color/colorPrimary"
+                android:textColor="#fff"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="15dp" />
 
             <Button
                 android:id="@+id/editor"
                 android:layout_width="wrap_content"
-                android:layout_below="@+id/LogOut"
-                android:layout_centerHorizontal="true"
                 android:text="editor"
-                android:textSize="22sp"
-                android:layout_marginTop="15dp"
-                android:layout_height="wrap_content" />
+                android:background="@color/colorPrimary"
+                android:textColor="#fff"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="18sp"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/LogOut"
+                android:layout_marginLeft="250dp"
+                android:layout_alignTop="@+id/LogOut" />
 
 
         </RelativeLayout>
