--- a/app/src/main/res/layout/article_layout.xml
+++ b/app/src/main/res/layout/article_layout.xml
@@ -11,25 +11,42 @@
         android:layout_width="match_parent"
         android:layout_height="80dp">
 
-        <TextView
-            android:id="@+id/titletextArticle"
-            android:text="@string/title_Text_article"
-            android:textSize="18sp"
-            android:textColor="#000"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <RelativeLayout
+            android:id="@+id/mainContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/authorTextArticle"
-            android:text="@string/author"
-            android:textSize="15sp"
-            android:textColor="#8b7676"
-            android:layout_marginLeft="230dp"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/titletextArticle"
+                android:text="@string/title_Text_article"
+                android:textSize="18sp"
+                android:textColor="#000"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/authorTextArticle"
+                android:text="@string/author"
+                android:textSize="15sp"
+                android:layout_below="@+id/titletextArticle"
+                android:textColor="#8b7676"
+
+                android:layout_marginTop="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/articleButton"
+                android:layout_below="@+id/titleTextContent"
+                android:layout_marginLeft="250dp"
+                android:text="read.."
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
